--- a/Tela-principal_BookGear.HTML
+++ b/Tela-principal_BookGear.HTML
@@ -10,7 +10,7 @@
 <style>
     body {
         background-color: rgb(43, 43, 46);
-        background-image: url(".jpg");
+        background-image: linear-gradient(rgb(43, 43, 44) ,rgb(65, 64, 64),rgb(34, 34, 34));
     }
 
     .container {
