--- a/Tela-principal_BookGear.HTML
+++ b/Tela-principal_BookGear.HTML
@@ -69,7 +69,7 @@
 
 <body>
     <div class="container menu">
-        <div class="item pesquisa">pesquisar</div>
+        <input type="placehouder">
         <div class="item item2"></div>
         <div class="item item3"></div>
     </div>
