--- a/Tela-principal_BookGear.HTML
+++ b/Tela-principal_BookGear.HTML
@@ -14,8 +14,7 @@
     }
     body {
         background-color: rgb(43, 43, 46);
-        background-image: url(BG.png
-        );
+        background-image: url(BG.png);
     }
 
     .container {
@@ -69,7 +68,7 @@
 
 <body>
     <div class="container menu">
-        <input type="placehouder">
+        <input class="pesquisa" type="placehouder">
         <div class="item item2"></div>
         <div class="item item3"></div>
     </div>
