--- a/Tela-principal_BookGear.HTML
+++ b/Tela-principal_BookGear.HTML
@@ -9,18 +9,21 @@
 </head>
 <style>
     body {
-        background-color: rgb(43, 43, 46);
+        background-color: rgb(61, 61, 68);
  
     }
     body {
         background-color: rgb(43, 43, 46);
         background-image: url(BG.png);
     }
+    img {
+  opacity: 0.9;
+}
 
     .container {
 
         display: grid;
-        background-color: rgb(66, 66, 66);
+        background-color: rgb(33, 35, 37);
         justify-content: space-evenly;
     }
     
@@ -33,13 +36,15 @@
     }
 
     .principal {
-        background-color: rgb(66, 66, 66);
+        opacity: 0,5;
+        background-color: rgb(33, 35, 37) ;
         padding: 20px;
         height: 100%;
         width: 97%;
         justify-content: space-between;
         grid-template-columns: 250px 150px 150px 150px 150px;
         grid-template-rows: 200px 200px 200px 200px 200px;
+
     }
 
     .pesquisa {
