alterações no menu e barra de pesquisa

--- a/Tela-principal_BookGear.HTML
+++ b/Tela-principal_BookGear.HTML
@@ -9,16 +9,9 @@
 </head>
 <style>
     body {
-        background-color: rgb(61, 61, 68);
- 
-    }
-    body {
         background-color: rgb(43, 43, 46);
         background-image: url(BG.png);
     }
-    img {
-  opacity: 0.9;
-}
 
     .container {
 
@@ -44,7 +37,9 @@
         justify-content: space-between;
         grid-template-columns: 250px 150px 150px 150px 150px;
         grid-template-rows: 200px 200px 200px 200px 200px;
-
+    }
+    .item{
+        text-align: center;
     }
 
     .pesquisa {
@@ -73,9 +68,15 @@
 
 <body>
     <div class="container menu">
-        <input class="pesquisa" type="placehouder">
-        <div class="item item2"></div>
-        <div class="item item3"></div>
+        <input class="pesquisa" type="text" placehouder="pesquisar" name="Pesquisa">
+        <div class="item item2">2</div>
+        <div class="item item3">3</div>
+        <div class="item item3">4</div>
+        <div class="item item3">5</div>
+        <div class="item item3">6</div>
+        <div class="item item3">7</div>
+        <div class="item item3">8</div>
+        <div class="item item3">9</div>
     </div>
     <div class="meio">
     </div>
