--- a/Login-bookgear.html
+++ b/Login-bookgear.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login - Bookgear</title>
     <style>
         * {
             margin: 0;
@@ -14,7 +14,7 @@
             background-repeat: no-repeat;
             background-size: cover;
             height: 75vh;
-            border-bottom: 30px solid gray;
+            border-bottom: 80px solid gray;
         }
         header{
             background-color: grey;
@@ -29,6 +29,7 @@
         .form-busca-site{
             width: 400px;
             height: 80%;
+            margin-top: 50px;
         }
         .btn-text-top{
             background-color: antiquewhite;
@@ -56,27 +57,33 @@
         .Login{
             color: yellow;
             font: bold 30px sans-serif;
-            margin-left: 160px;
+            
         }
         .box{
             background-color: rgb(41, 41, 41);
             display: flex;
             flex-wrap: wrap;
             flex-direction: column;
-            margin: 180px;
-            width: 30%;
+            margin: 15% 0px 0px 15%;
+            width: 25%;
             height: 90%;
             text-align: top;
             justify-content: top;
         }
         .btn-username{
             color: white;
-            background-color: rgb(41, 41, 41);
+            background-color: rgba(52, 52, 52, 0.789);
             border-bottom: 1px solid rgba(255, 255, 255, 1);
             height: 30px;
-            width: 60%;
-            margin-left: 80px;
-            margin-top: 10px;
+            width: 55%;
+            margin-left: 20%;
+            margin-top: 20px;
+        }
+        .forgot-password{
+            margin-top: 40px;
+            color: yellow;
+            font: bold 17px sans-serif;
+            margin-left: 20%;
         }
     </style>
 </head>
@@ -91,8 +98,9 @@
         <div class="texto"><p class="Login">Login</p></div>
         <input type="text" name="username" class="btn-username" placeholder="Nome de usuário">
         <input type="password" name="username" class="btn-username" placeholder="Senha">
-        <div style="margin-left: 80px;">
-            <input style="margin-top: 30px;" type="checkbox" name="connected" id="c">
+        <p class="forgot-password">Esqueceu a senha?</p>
+        <div style="margin-left: 20%;">
+            <input style="margin-top: 40px;" type="checkbox" name="connected" id="c">
             <label for="c" style="color: white; font-family: Arial, Helvetica, sans-serif;">Continuar Conectado</label>
         </div>
         
