--- a/Login-bookgear.html
+++ b/Login-bookgear.html
@@ -22,22 +22,23 @@
             justify-content: center;
             text-align: center;
             width: 100%;
-            height: 80px;
+            height: 10%;
             position: fixed;
             top: 0;
             overflow: hidden;
         }
         .form-busca-site{
-            position:fixed;
+            
             width: 400px;
-            height: 60%;
+            height: 100%;
            
         }
         .btn-text-top{
+            width: 80%;
+            height: 50%;
             background-color: rgb(56, 56, 56);
             border: 1px solid rgba(255, 255, 255, 1);
             border-radius: 20px;
-            padding: 3% 10% 3% 6%;
             margin-top: 5%;
         }
         .btn-buscar-top{
@@ -65,7 +66,7 @@
             flex-direction: column;
             margin: 15% 0px 0px 15%;
             width: 25%;
-            height: 90%;
+            height: 70%;
             text-align: top;
             justify-content: top;
             overflow: auto;
