--- a/Login-bookgear.html
+++ b/Login-bookgear.html
@@ -40,6 +40,8 @@
             border: 1px solid rgba(255, 255, 255, 1);
             border-radius: 20px;
             margin-top: 5%;
+            text-align: center;
+            color: rgb(255, 255, 255);
         }
         .btn-buscar-top{
             width: 20px;
@@ -48,7 +50,7 @@
             border: none;
             cursor: pointer;
             position: relative;
-            transform: translateY(-150%);
+            transform: translateY(-140%);
             left: 100px;
         }
         .texto{
@@ -102,9 +104,13 @@
     </header>
     <div class="box">
         <div class="texto"><p class="Login">Login</p></div>
+        
         <input type="text" name="username" class="btn-username" placeholder="Nome de usuário">
+
         <input type="password" name="username" class="btn-username" placeholder="Senha">
+
         <p class="forgot-password">Esqueceu a senha?</p>
+
         <div style="margin-left: 20%;">
             <input style="margin-top: 20px;" type="checkbox" name="connected" id="c">
             <label for="c" style="color: white; font-family: Arial, Helvetica, sans-serif;">Continuar Conectado</label>
