--- a/Login-bookgear.html
+++ b/Login-bookgear.html
@@ -71,7 +71,7 @@
             height: 70%;
             text-align: top;
             justify-content: top;
-            overflow: auto;
+            overflow-y: auto;
         }
         .Login{
             color: yellow;
