--- a/cabecalho_teste.html
+++ b/cabecalho_teste.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cabecalho</title>
-    <link rel="stylesheet" href="cabecalho.css">
+    <link rel="stylesheet" type="text/css" href="cabecalho.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#">LIVROS</a></li>
-                <li><a href="#">CAIXAS</a></li>
-                <li><a href="#">CARRINHO</a></li>
-                <li><a href="#">EDITORA</a></li>
-                <li><a href="#">WISHLIST</a></li>
-                <li><a href="#">AUTORES</a></li>
+                <li><a href="#" class="books">LIVROS</a></li>
+                <li><a href="#" class="boxes">CAIXAS</a></li>
+                <li><a href="#" class="checkout">CARRINHO</a></li>
+                <li><a href="#" class="publisher">EDITORA</a></li>
+                <li><a href="#" class="desejos">WISHLIST</a></li>
+                <li><a href="#" class="autor">AUTORES</a></li>
             </ul>
         </nav>
     </header>
