Update cabacalho, pagina login
tela principal tambem

--- a/Tela-principal_BookGear.HTML
+++ b/Tela-principal_BookGear.HTML
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="cabecalho.css">
+    <title>Bookgear</title>
 </head>
 <style>
     body {
@@ -71,7 +72,21 @@
         <input class="pesquisa" type="placehouder">
         <div class="item item2"></div>
         <div class="item item3"></div>
+        
     </div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#" class="books">LIVROS</a></li>
+                <li><a href="#" class="boxes">CAIXAS</a></li>
+                <li><a href="#" class="checkout">CARRINHO</a></li>
+                <li><a href="#" class="publisher">EDITORA</a></li>
+                <li><a href="#" class="desejos">WISHLIST</a></li>
+                <li><a href="#" class="autor">AUTORES</a></li>
+            </ul>
+        </nav>
+        </header>
+    
     <div class="meio">
     </div>
     <div class="container principal">
