Imagem de background trocada
trocado imagem de background

--- a/Login-bookgear.html
+++ b/Login-bookgear.html
@@ -10,7 +10,7 @@
             margin: 0;
         }
         body{
-            background-image: url(BG.png);
+            background-image: url(background.jpg);
             background-repeat: no-repeat;
             background-size: cover;
             height: 75vh;
