--- a/Tela-principal_BookGear.HTML
+++ b/Tela-principal_BookGear.HTML
@@ -13,7 +13,7 @@
 
     body {
         background-color: rgb(255, 255, 255);
-        background-image: url(BG.png);
+        background-image: url(background.jpg);
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
