Instalado express.js e alterações na tela de login
todos os folders relacionados com o express foram instalados (o node_modules deve ser instalado localmente) e a tela de login agora tem o cabeçalho atualizado e design alterado para algo mais polido

--- a/public/htmls/cabecalho.html
+++ b/public/htmls/cabecalho.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="cabecalho.css">
-    <link rel="stylesheet" type="text/css" href="barrapesquisa.css">
+    <link rel="stylesheet" type="text/css" href="./../stylesheets/cabecalho.css">
+    <link rel="stylesheet" type="text/css" href="./../stylesheets/barrapesquisa.css">
     <style>
         header {
     background-color: rgb(66, 66, 66);
@@ -29,7 +29,7 @@
   }
   
   .logo img {
-    margin-left: 20px;
+    margin-left: 15px;
     height: 80px;
   }
   
@@ -46,7 +46,7 @@
     <header>
         <div class="container">
           <div class="logo">
-            <a href="#"><img class="logotipo" src="Capturar-removebg-preview.png" alt="bookgear"></a>
+            <a href="#"><img class="logotipo" src="./../images/Capturar-removebg-preview.png" alt="bookgear"></a>
             
           </div>
       <div class="search-box">
