--- a/public/htmls/cabecalho_teste.html
+++ b/public/htmls/cabecalho_teste.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cabecalho</title>
-    <link rel="stylesheet" type="text/css" href="cabecalho.css">
+    <link rel="stylesheet" type="text/css" href="./../stylesheets/cabecalho.css">
 </head>
 <body>
     <header>
