alterações na tela principal, area de banners

--- a/public/html/cabecalho.html
+++ b/public/html/cabecalho.html
@@ -19,7 +19,7 @@
   }
 
   
-  .container {
+  .containermenu {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
@@ -44,7 +44,7 @@
 <body>
     <header class="main">
     <header>
-        <div class="container">
+        <div class="containermenu">
           <div class="logo">
             <a href="#"><img class="logotipo" src="./../images/Capturar-removebg-preview.png" alt="bookgear"></a>
             
