Correção da logo não indo pra tela principal
correção na tela de login nao ir pra tela de login a partir da logo

--- a/public/html/Login-bookgear.html
+++ b/public/html/Login-bookgear.html
@@ -87,7 +87,7 @@
 
         <div class="containermenu">
             <div class="logo">
-                <a href="#"><img class="logotipo" src="./../images/Capturar-removebg-preview.png" alt="bookgear"></a>
+                <a href="Tela-principal_BookGear.html"><img class="logotipo" src="./../images/Capturar-removebg-preview.png" alt="bookgear"></a>
 
             </div>
             <div class="search-box">
