Correção de formatação da página de login
Coreeção da correção feita anteriormente na página de login

--- a/public/html/Login-bookgear.html
+++ b/public/html/Login-bookgear.html
@@ -63,7 +63,7 @@
 
 
         .mini-box a:link,
-        a:visited {
+        .mini-box a:visited {
             background-color: #ff7300;
             color: rgb(34, 34, 34);
             width: 100px;
@@ -76,7 +76,7 @@
         }
 
         .mini-box a:hover,
-        a:active {
+        .mini-box a:active {
             background-color: #d15e00;
         }
     </style>
@@ -87,7 +87,7 @@
 
         <div class="containermenu">
             <div class="logo">
-                <a href="Tela-principal_BookGear.html"><img class="logotipo" src="./../images/Capturar-removebg-preview.png" alt="bookgear"></a>
+                <a href="#"><img class="logotipo" src="./../images/Capturar-removebg-preview.png" alt="bookgear"></a>
 
             </div>
             <div class="search-box">
