--- a/public/html/cabecalho.html
+++ b/public/html/cabecalho.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./../stylesheets/barrapesquisa.css">
     <style>
         header {
-    background-color: rgb(66, 66, 66);
+    background-color: rgba(42, 41, 43, 0.9);
     height: fit-content;
     position: fixed;
     top: 0;
