--- a/public/html/Login-bookgear.html
+++ b/public/html/Login-bookgear.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./../stylesheets/barrapesquisa.css">
     <link rel="stylesheet" type="text/css" href="./../stylesheets/cabecalho.css">
+    <link rel="icon" type="image/x-icon" href="./../images/logo-removebg-preview.png">
     <title>Login - Bookgear</title>
     <style>
         .bimage {
