tela de cadastro criada, cabecalho e tela inicial alterada para combinar com o resto do site

--- a/public/html/Tela-principal_BookGear.html
+++ b/public/html/Tela-principal_BookGear.html
@@ -145,13 +145,13 @@
         color: grey;
     }
 
-    a:link,
-    a:visited {
+    .orange a:link,
+    .orange a:visited {
         color: grey;
     }
 
 
-    a:hover {
+    .orange a:hover {
         background-color: rgb(255, 102, 0);
         color: rgb(19, 19, 19);
     }
@@ -175,8 +175,8 @@
 
             <div class="user">
                 <button type="button" class="botaoentrar" value="Entrar">Entrar</button>
-                    <a href="Login-bookgear.html">entrar</a>
-                <a href="#">Cadastrar</a>
+                    <a class="orange" href="Login-bookgear.html">entrar</a>
+                <a class="orange" href="#">Cadastrar</a>
             </div>
         </div>
 
@@ -184,12 +184,12 @@
         <div class="cabecalho">
             <nav>
                 <ul>
-                    <li><a href="#" class="books">LIVROS</a></li>
-                    <li><a href="#" class="boxes">CAIXAS</a></li>
-                    <li><a href="#" class="checkout">CARRINHO</a></li>
-                    <li><a href="#" class="publisher">EDITORA</a></li>
-                    <li><a href="#" class="desejos">WISHLIST</a></li>
-                    <li><a href="#" class="autor">AUTORES</a></li>
+                    <li class="orange"><a href="#">LIVROS</a></li>
+                    <li class="orange"><a href="#">CAIXAS</a></li>
+                    <li class="orange"><a href="#">CARRINHO</a></li>
+                    <li class="orange"><a href="#">EDITORA</a></li>
+                    <li class="orange"><a href="#">WISHLIST</a></li>
+                    <li class="orange"><a href="#">AUTORES</a></li>
 
                 </ul>
             </nav>
@@ -236,16 +236,16 @@
             <div class="categorias">
                 <h1>categorias</h1>
                 <ul class="linkcateorias">
-                    <li><a href="#" class="linkcateorias">ação</a></li>
-                    <li><a href="#" class="link_cateorias">aventura</a></li>
-                    <li><a href="#" class="link_cateorias">clássicos</a></li>
-                    <li><a href="#" class="link_cateorias">drama</a></li>
-                    <li><a href="#" class="link_cateorias">fantasia</a></li>
-                    <li><a href="#" class="link_cateorias">ficção cientifica</a></li>
-                    <li><a href="#" class="link_cateorias">infantil</a></li>
-                    <li><a href="#" class="link_cateorias">jogos</a></li>
-                    <li><a href="#" class="link_cateorias">suspense</a></li>
-                    <li><a href="#" class="link_cateorias">terror</a></li>
+                    <li class="orange"><a href="#">ação</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">aventura</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">clássicos</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">drama</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">fantasia</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">ficção cientifica</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">infantil</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">jogos</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">suspense</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">terror</a></li>
                 </ul>
 
             </div>
