--- a/public/html/cadastro.html
+++ b/public/html/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./../stylesheets/barrapesquisa.css">
     <link rel="stylesheet" type="text/css" href="./../stylesheets/cabecalho.css">
     <link rel="icon" type="image/x-icon" href="./../images/logo-removebg-preview.png">
-    <title>Login - Bookgear</title>
+    <title>Cadastro - Bookgear</title>
     <style>
         .bimage {
             background-image: url(./../images/background.jpg);
@@ -38,7 +38,7 @@
         .Login {
             color: #ff7300;
             font: bold 30px sans-serif;
-            margin-left: 160px;
+            margin-left: 135px;
         }
 
         .btn-username {
@@ -48,7 +48,7 @@
             height: 30px;
             width: 260px;
             margin-top: 20px;
-            text-align: center;
+            text-align: left;
         }
 
         .forgot-password {
@@ -100,8 +100,8 @@
                     </svg></a>
             </div>
             <div class="user">
-                <a href="#">Entrar</a>
-                <a href="#">Cadastrar</a>
+                <a href="Login-bookgear.html">Entrar</a>
+                <a href="cadastro.html">Cadastrar</a>
             </div>
         </div>
         <div class="cabecalho">
@@ -121,23 +121,17 @@
     <div class="bimage">
         <div class="box">
             <div class="texto">
-                <p class="Login">Login</p>
-            </div>
+            <p class="Login">Cadastro</p>
+        </div>
 
-            <input type="email" name="username" class="btn-username" placeholder="Email">
-
-            <input type="password" name="username" class="btn-username" placeholder="Senha">
-
-            <p class="forgot-password">Esqueceu a senha?</p>
-
-            <div>
-                <input style="margin-top: 20px;" type="checkbox" name="connected" id="c">
-                <label for="c" style="color: white; font-family: Arial, Helvetica, sans-serif;">Continuar
-                    Conectado</label>
-            </div>
+        <form action="#" name="cadastro">
+            <input type="text" name="username" class="btn-username" placeholder="Nome">
+            <input type="email" name="email" class="btn-username" placeholder="E-mail">
+            <input type="password" name="password" class="btn-username" placeholder="Senha">
+            <input type="password" name="confirm" class="btn-username" placeholder="Confirmar senha">
+        </form>    
 
             <div class="mini-box">
-                <a style="margin-left: 0px;" href="Tela-principal_BookGear.html">Conectar</a>
                 <a href="#">Cadastrar</a>
             </div>
         </div>
