--- a/public/html/Tela-principal_BookGear.html
+++ b/public/html/Tela-principal_BookGear.html
@@ -19,7 +19,6 @@
     }
 
     .container {
-
         display: grid;
         background-color: rgb(66, 66, 66);
         justify-content: space-evenly;
@@ -39,12 +38,13 @@
         background-color: rgba(42, 41, 43, 0.9);
         box-shadow: 0px 0px 10px rgb(42, 41, 43);
         padding: 20px;
+        padding-top: 30px;
         height: 1000px;
         width: 97%;
-        row-gap: 10px;
+        row-gap: 28px;
         justify-content: space-between;
         grid-template-columns: 250px 150px 150px 150px 150px;
-        grid-template-rows: 270px 270px 270px 270px 270px;
+        grid-auto-rows: 270px;
     }
 
     .banners_meio {
@@ -101,6 +101,7 @@
         background-color: rgb(24, 24, 24);
         grid-row: 1/6;
         grid-column: 1/2;
+        
     }
 
     .ul {
@@ -116,14 +117,14 @@
     .imgbox {
         width: 150px;
         height: 200px;
-        display:block;
+        display: block;
         justify-content: center;
         font-family: 'Verdana', Courier, monospace;
         text-align: center;
     }
 
     .item {
-        display:block;
+        display: block;
         color: white;
         justify-content: center;
         font-family: 'Verdana', Courier, monospace;
@@ -131,9 +132,10 @@
         transition: 0.5s ease;
 
     }
-    .item:hover{
-        transform: scale(1.2); 
-        background-color: rgba(26, 26, 26,0.8);
+
+    .item:hover {
+        transform: scale(1.2);
+        background-color: rgba(26, 26, 26, 0.8);
         transition: 0.3s ease;
         cursor: pointer;
         box-shadow: 0px 0px 10px rgb(42, 41, 43);
@@ -148,14 +150,27 @@
     .orange a:link,
     .orange a:visited {
         color: grey;
+        text-decoration: none;
     }
 
+    .orange:hover {
+        background-color: #f85d03;
+        transition: 0.3s ease;
+        text-decoration: none;
+    }
+
+    .orange {
+        padding: 10px;
+        margin: 10px;
+        transition: 0.6s ease;
+        color: #f85d03;
+    }
 
     .orange a:hover {
-        background-color: rgb(255, 102, 0);
-        color: rgb(19, 19, 19);
+        color: rgb(182, 182, 182);
     }
 </style>
+
 <body>
     <header class="main">
 
@@ -175,36 +190,34 @@
 
             <div class="user">
                 <button type="button" class="botaoentrar" value="Entrar">Entrar</button>
-                    <a class="orange" href="Login-bookgear.html">entrar</a>
-                <a class="orange" href="#">Cadastrar</a>
+                <a class="login" href="Login-bookgear.html">entrar</a>
+                <a class="login" href="#">Cadastrar</a>
             </div>
         </div>
-
-
         <div class="cabecalho">
             <nav>
                 <ul>
-                    <li class="orange"><a href="#">LIVROS</a></li>
-                    <li class="orange"><a href="#">CAIXAS</a></li>
-                    <li class="orange"><a href="#">CARRINHO</a></li>
-                    <li class="orange"><a href="#">EDITORA</a></li>
-                    <li class="orange"><a href="#">WISHLIST</a></li>
-                    <li class="orange"><a href="#">AUTORES</a></li>
-
+                    <li><a href="#">LIVROS</a></li>
+                    <li><a href="#">CAIXAS</a></li>
+                    <li><a href="#">CARRINHO</a></li>
+                    <li><a href="#">EDITORA</a></li>
+                    <li><a href="#">WISHLIST</a></li>
+                    <li><a href="#">AUTORES</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
 
-    
+
     <div class="meio">
         <div class="banners_meio">
             <img class="banner1 banner" src="../images/banner1.png" alt="banner">
             <img class="banner2 banner" src="../images/banner1.png" alt="banner">
         </div>
         <div class="container principal">
-            <div class="item item1"> <!-- Campo onde ficam os produtos -->
+            <div class="item item1">
+                <!-- Campo onde ficam os produtos -->
                 <img class="imgbox" src="../images/box.jpg">
                 <p class="descrição">Caixa da BookGear Lorem ipsum dolor sit amet consectetura</p>
             </div>
@@ -236,18 +249,17 @@
             <div class="categorias">
                 <h1>categorias</h1>
                 <ul class="linkcateorias">
-                    <li class="orange"><a href="#">ação</a></li>
-                    <li class="orange"><a href="#" class="link_cateorias">aventura</a></li>
-                    <li class="orange"><a href="#" class="link_cateorias">clássicos</a></li>
-                    <li class="orange"><a href="#" class="link_cateorias">drama</a></li>
-                    <li class="orange"><a href="#" class="link_cateorias">fantasia</a></li>
-                    <li class="orange"><a href="#" class="link_cateorias">ficção cientifica</a></li>
-                    <li class="orange"><a href="#" class="link_cateorias">infantil</a></li>
-                    <li class="orange"><a href="#" class="link_cateorias">jogos</a></li>
-                    <li class="orange"><a href="#" class="link_cateorias">suspense</a></li>
-                    <li class="orange"><a href="#" class="link_cateorias">terror</a></li>
+                    <li class="orange"><a href="#">Ação</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">Aventura</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">Clássicos</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">Drama</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">Fantasia</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">Ficção cientifica</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">Infantil</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">Jogos</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">Suspense</a></li>
+                    <li class="orange"><a href="#" class="link_cateorias">Terror</a></li>
                 </ul>
-
             </div>
         </div>
 </body>
