--- a/public/html/cabecalho.html
+++ b/public/html/cabecalho.html
@@ -42,37 +42,41 @@
     </style>
 </head>
 <body>
-    <header class="main">
-    <header>
-        <div class="containermenu">
-          <div class="logo">
-            <a href="#"><img class="logotipo" src="./../images/Capturar-removebg-preview.png" alt="bookgear"></a>
-            
-          </div>
-      <div class="search-box">
-            <input type="text" placeholder="Pesquisar">
-            <a href="#" class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-            </svg></a>
-      </div>  
-        <div class="user">
-          <a href="#">Entrar</a>
-            <a href="#">Cadastrar</a>
-          </div>
+  <header class="main">
+
+
+    <div class="containermenu">
+        <div class="logo">
+            <a href="#"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
         </div>
-        <div class="cabecalho">
+        <div class="search-box">
+            <input type="text" placeholder="Pesquisar">
+            <a href="#" class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                    fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                </svg></a>
+        </div>
+
+
+        <div class="user">
+            <a href="Login-bookgear.html">
+                <button type="url" class="botao">Entrar</button></a>
+            <a class="login" href="#">
+                <button type="url" class="botao">Cadastrar</button></a>
+        </div>
+    </div>
+    <div class="cabecalho">
         <nav>
-          <ul>
-            <li><a href="#" class="books">LIVROS</a></li>
-            <li><a href="#" class="boxes">CAIXAS</a></li>
-            <li><a href="#" class="checkout">CARRINHO</a></li>
-            <li><a href="#" class="publisher">EDITORA</a></li>
-            <li><a href="#" class="desejos">WISHLIST</a></li>
-            <li><a href="#" class="autor">AUTORES</a></li>
-            
-          </ul>
+            <ul>
+                <li><a href="#">LIVROS</a></li>
+                <li><a href="#">CAIXAS</a></li>
+                <li><a href="#">CARRINHO</a></li>
+                <li><a href="#">EDITORA</a></li>
+                <li><a href="#">WISHLIST</a></li>
+                <li><a href="#">AUTORES</a></li>
+            </ul>
         </nav>
-      </div>
-      </header>    
+    </div>
+</header>    
 </body>
 </html>
