Correções e linkagem de paginas

--- a/public/html/cadastro.html
+++ b/public/html/cadastro.html
@@ -16,6 +16,7 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
+            margin-right: 5px;
         }
 
         .texto {
@@ -62,6 +63,9 @@
             flex-direction: row;
         }
 
+        .mini-box a{
+            border-radius: 10px;
+        }
 
         .mini-box a:link,
         .mini-box a:visited {
@@ -85,8 +89,6 @@
 
 <body>
     <header class="main">
-
-
         <div class="containermenu">
             <div class="logo">
                 <a href="#"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
