--- a/public/html/Login-bookgear.html
+++ b/public/html/Login-bookgear.html
@@ -17,6 +17,7 @@
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
+        margin-right: 5px;
     }
 
         .texto {
@@ -63,6 +64,9 @@
             flex-direction: row;
         }
 
+        .mini-box a{
+            border-radius: 10px;
+        }
 
         .mini-box a:link,
         .mini-box a:visited {
@@ -104,7 +108,7 @@
             <div class="user">
                 <a href="Login-bookgear.html">
                     <button type="url" class="botao">Entrar</button></a>
-                <a class="login" href="#">
+                <a class="login" href="cadastro.html">
                     <button type="url" class="botao">Cadastrar</button></a>
             </div>
         </div>
