--- a/public/html/carrinho.html
+++ b/public/html/carrinho.html
@@ -40,7 +40,7 @@
         background-color: rgba(255, 255, 255, 0);
         padding: 20px;
         padding-top: 30px;
-        height: 1000px;
+        height: fit-content;
         width: 97%;
         justify-content: space-between;
 
@@ -94,24 +94,25 @@
     }
 
     .imgbox {
-        width: 150px;
-        height: 200px;
+        width: 160px;
+        height: 150px;
         display: block;
         justify-content: center;
         font-family: 'Verdana', Courier, monospace;
         text-align: center;
+        float: left;
+
     }
 
     .item {
         display: block;
         box-shadow: 0px 0px 3px rgb(42, 41, 43);
-        background-color: rgba(42, 41, 43, 0.9);
-        border-radius: 6px;
+        background-color: rgba(42, 41, 43, 0.8);
+        border-radius: 4px;
         justify-content: center;
         font-family: 'Verdana', Courier, monospace;
         text-align: center;
         transition: 0.5s ease;
-
     }
 
     .descrição {
@@ -122,12 +123,11 @@
     .preco {
         width: 380px;
         height: 330px;
-        background-color: rgba(42, 41, 43, 0.6);
+        background-color: rgba(42, 41, 43, 0.8);
         box-shadow: 0px 0px 3px rgb(42, 41, 43);
-        border-radius: 6px;
-        grid-column: 2 / 3;
-        grid-row: 1 / 9;
-
+        border-radius: 4px;
+        left: 950px;
+        position: fixed;
     }
 </style>
 
@@ -175,33 +175,37 @@
         <div class="container grid">
 
             <div class="Div item">
-                <div class="imgbox"></div>
+                <div class="imgbox"><img class="imgbox" src="../images/box.jpg"></div>
             </div>
 
             <div class="Div item">
-                <div class="imgbox"></div>
+                <div class="imgbox"><img class="imgbox" src="../images/box.jpg"></div>
             </div>
 
             <div class="Div item">
-                <div class="imgbox"></div>
-            </div>
-            <div class="Div item">
-                <div class="imgbox"></div>
-            </div>
-            <div class="Div item">
-                <div class="imgbox"></div>
-            </div>
-            <div class="Div item">
-                <div class="imgbox"></div>
-            </div>
-            <div class="Div item">
-                <div class="imgbox"></div>
+                <div class="imgbox"><img class="imgbox" src="../images/box.jpg"></div>
             </div>
 
+            <div class="Div item">
+                <div class="imgbox"><img class="imgbox" src="../images/box.jpg"></div>
+            </div>
 
+            <div class="Div item">
+                <div class="imgbox"><img class="imgbox" src="../images/box.jpg"></div>
+            </div>
+
+            <div class="Div item">
+                <div class="imgbox"><img class="imgbox" src="../images/box.jpg"></div>
+            </div>
+
+            <div class="Div item">
+                <div class="imgbox"><img class="imgbox" src="../images/box.jpg"></div>
+            </div>
         </div>
+
         <div class="preco">
         </div>
+
     </div>
 </body>
 
